--- a/index.html
+++ b/index.html
@@ -3,45 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش | V110 👑</title>
+    <title>إمبراطورية علوش | V111 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --main: #ffd700; --bg: #050505; --accent: rgba(255,215,0,0.2); }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
-        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; transition: 0.5s; }
+        :root { --main: #ffd700; --bg: #0b0b0b; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; touch-action: manipulation; }
+        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; position: relative; }
 
         /* لقب المالك */
-        .owner-tag { font-size: 22px !important; font-weight: 900; background: linear-gradient(to right, #ff00ea, #00e1ff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: moveGrad 3s linear infinite; }
-        @keyframes moveGrad { 0%{background-position:0% 50%} 100%{background-position:100% 50%} }
+        .owner-tag { font-size: 20px !important; font-weight: 900; background: linear-gradient(to right, #ff00ea, #00e1ff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: moveGrad 3s linear infinite; }
+        @keyframes moveGrad { 0%{background-position:0%} 100%{background-position:100%} }
 
-        .header { height: 60px; background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 10001; }
-        .h-btn { background: none; border: none; font-size: 24px; color: white; cursor: pointer; }
+        /* الهيدر */
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; position: relative; }
+        .h-btn { background: none; border: none; font-size: 26px; color: white; cursor: pointer; z-index: 1100; }
 
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 140px; }
-        .bubble { background: rgba(255,255,255,0.07); padding: 12px; border-radius: 15px; border-right: 4px solid var(--main); max-width: 85%; cursor: pointer; border-left: 1px solid var(--accent); }
-        .yt-small { width: 150px; height: 150px; border-radius: 10px; border: 1px solid var(--main); margin-top: 8px; display: block; }
+        /* الشات */
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; padding-bottom: 130px; }
+        .bubble { background: #1a1a1a; padding: 10px; border-radius: 12px; border-right: 4px solid var(--main); max-width: 85%; position: relative; }
+        .yt-small { width: 150px; height: 150px; border-radius: 10px; border: 1px solid var(--main); margin-top: 5px; display: block; }
 
-        /* منطقة الكتابة - معدلة للهواتف */
-        .footer { position: fixed; bottom: 0; width: 100%; height: 115px; background: rgba(0,0,0,0.95); border-top: 2px solid var(--main); padding: 10px 15px 45px; z-index: 10001; }
-        @media screen and (min-width: 768px) { .footer { height: 100px; padding: 10px 15px 30px; } } /* الحاسبة تبقى كما هي */
+        /* منطقة الكتابة - معدلة للهاتف */
+        .footer { position: fixed; bottom: 0; left:0; right:0; height: 110px; background: #000; border-top: 2px solid var(--main); padding: 10px 15px 40px 15px; z-index: 2000; }
+        .input-box { display: flex; align-items: center; background: #111; border: 1px solid var(--main); border-radius: 25px; flex: 1; padding: 0 10px; }
+        #msg-in { flex: 1; height: 40px; background: transparent; border: none; color: white; outline: none; font-size: 16px; }
+        .send-btn { background: var(--main); color: black; border: none; height: 40px; padding: 0 15px; border-radius: 20px; font-weight: 900; margin-right: 10px; cursor: pointer; }
 
-        .input-wrapper { display: flex; align-items: center; background: #111; border: 1px solid var(--main); border-radius: 25px; padding: 0 10px; flex: 1; }
-        #msg-in { flex: 1; height: 42px; background: transparent; border: none; color: #fff; padding: 0 10px; outline: none; font-size: 16px; }
-        .clear-btn { color: #ff4d4d; font-size: 22px; cursor: pointer; padding: 0 5px; font-weight: bold; }
-        .send-btn { background: var(--main); color: #000; border: none; height: 42px; padding: 0 20px; border-radius: 25px; font-weight: 900; margin-right: 8px; cursor: pointer; }
-
-        /* الثيمات */
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0a0a0a; z-index: 20000; transition: 0.4s; visibility: hidden; border: 2px solid var(--main); overflow-y: auto; }
-        #side-r { right: -300px; } #side-l { left: -300px; }
+        /* القوائم الجانبية */
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 5000; transition: 0.3s; visibility: hidden; border: 2px solid var(--main); overflow-y: auto; }
+        #side-r { right: -285px; } #side-l { left: -285px; }
         .side.active { visibility: visible; transform: translateX(0); }
         #side-r.active { transform: translateX(-280px); } #side-l.active { transform: translateX(280px); }
-        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 15000; display: none; }
+        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 4000; display: none; }
 
-        .theme-card { display: flex; gap: 10px; flex-wrap: wrap; padding: 10px; }
-        .t-btn { width: 45px; height: 45px; border-radius: 10px; cursor: pointer; border: 2px solid #333; transition: 0.3s; }
-        .t-btn:hover { transform: scale(1.1); border-color: #fff; }
+        /* أزرار الألوان */
+        .color-btn { width: 35px; height: 35px; border-radius: 50%; border: 2px solid white; cursor: pointer; margin: 5px; display: inline-block; }
     </style>
 </head>
 <body>
@@ -49,42 +47,32 @@
 <div id="overlay" onclick="closeSides()"></div>
 
 <div class="header">
-    <button class="h-btn" onclick="openSide('side-l')">🎨</button>
-    <div style="display:flex; align-items:center; gap:8px;">
-        <span style="color:var(--main); font-weight:900;">إمبراطورية علوش</span>
-        <button class="h-btn" onclick="location.reload()" style="font-size:18px;">🔄</button>
-    </div>
+    <button class="h-btn" onclick="openSide('side-l')">⚙️</button>
+    <div style="color:var(--main); font-weight:900;">إمبراطورية علوش</div>
     <button class="h-btn" onclick="openSide('side-r')">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="text-align:center; padding:20px; color:var(--main);">👥 المتصلون</h3>
+    <h3 style="text-align:center; padding:15px; color:var(--main);">👤 المتصلون</h3>
     <div id="on-list"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div style="padding:20px; text-align:center; border-bottom:1px solid #333;">
-        <div onclick="document.getElementById('f-up').click()" style="width:80px; height:80px; border:2px solid var(--main); border-radius:50%; margin:0 auto; overflow:hidden; cursor:pointer;">
+    <div style="padding:20px; text-align:center;">
+        <div onclick="document.getElementById('f-up').click()" style="width:80px; height:80px; border:2px solid var(--main); border-radius:50%; margin:0 auto; overflow:hidden;">
             <img id="p-img" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:100%; height:100%; object-fit:cover;">
         </div>
         <input type="file" id="f-up" hidden onchange="upImg(this)">
         <h3 id="p-name" style="margin-top:10px;">علوش</h3>
-        <input type="text" id="p-decor" placeholder="زخرف اسمك هنا..." style="width:100%; padding:10px; margin-top:10px; background:#000; color:var(--main); border:1px solid #333; border-radius:8px;" oninput="updateMe()">
+        <input type="text" id="p-decor" placeholder="زخرف اسمك.." style="width:90%; padding:8px; margin-top:10px; background:#000; color:white; border:1px solid var(--main); border-radius:5px;" oninput="updateMe()">
     </div>
-
-    <div style="padding:15px;">
-        <p style="font-size:14px; color:var(--main); margin-bottom:10px;">🌈 لوحة الثيمات الملكية:</p>
-        <div class="theme-card">
-            <div class="t-btn" style="background:linear-gradient(#ffd700, #000);" onclick="changeTheme('#ffd700','#050505')"></div>
-            <div class="t-btn" style="background:linear-gradient(#ff00ea, #000);" onclick="changeTheme('#ff00ea','#100010')"></div>
-            <div class="t-btn" style="background:linear-gradient(#00e1ff, #000);" onclick="changeTheme('#00e1ff','#000810')"></div>
-            <div class="t-btn" style="background:linear-gradient(#32cd32, #000);" onclick="changeTheme('#32cd32','#001000')"></div>
-            <div class="t-btn" style="background:linear-gradient(#ff4500, #000);" onclick="changeTheme('#ff4500','#100200')"></div>
-        </div>
-        <p style="font-size:12px; color:gray; margin-top:15px;">اختر لون مخصص (لانهاية):</p>
-        <input type="color" id="fav-color" style="width:100%; height:40px; border:none; background:none; cursor:pointer;" oninput="changeTheme(this.value, '#050505')">
-        
-        <button onclick="clearChat()" style="width:100%; padding:12px; background:red; color:white; border:none; border-radius:8px; cursor:pointer; margin-top:30px; font-weight:bold;">🧹 تنظيف الشات</button>
+    <div style="padding:15px; border-top:1px solid #333;">
+        <p>🎨 اختر ثيمك:</p>
+        <div class="color-btn" style="background:gold;" onclick="setTheme('#ffd700','#0b0b0b')"></div>
+        <div class="color-btn" style="background:#ff00ea;" onclick="setTheme('#ff00ea','#100010')"></div>
+        <div class="color-btn" style="background:#00e1ff;" onclick="setTheme('#00e1ff','#000810')"></div>
+        <div class="color-btn" style="background:#32cd32;" onclick="setTheme('#32cd32','#001000')"></div>
+        <button onclick="clearChat()" style="width:100%; padding:10px; background:red; color:white; border:none; border-radius:5px; margin-top:20px;">🧹 تنظيف الشات</button>
     </div>
 </div>
 
@@ -92,9 +80,9 @@
 
 <div class="footer">
     <div style="display:flex; align-items:center;">
-        <div class="input-wrapper">
-            <input type="text" id="msg-in" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendM()">
-            <span class="clear-btn" onclick="document.getElementById('msg-in').value=''">×</span>
+        <div class="input-box">
+            <input type="text" id="msg-in" placeholder="اكتب..." onkeypress="if(event.key==='Enter') sendM()">
+            <b onclick="document.getElementById('msg-in').value=''" style="color:red; cursor:pointer; padding:0 5px;">×</b>
         </div>
         <button class="send-btn" onclick="sendM()">إرسال</button>
     </div>
@@ -105,24 +93,65 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let uName = localStorage.getItem('chat_name') || prompt("أدخل اسمك:") || "زائر";
+    let uName = localStorage.getItem('chat_name') || prompt("اسمك:") || "زائر";
     localStorage.setItem('chat_name', uName);
     let myData = { name: uName, decor: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png", color: "#ffd700" };
 
     function init() {
         document.getElementById('p-name').innerText = uName;
-        db.ref('v110_on/' + uName).set(myData);
-        db.ref('v110_on/' + uName).onDisconnect().remove();
+        db.ref('v111_on/' + uName).set(myData);
+        db.ref('v111_on/' + uName).onDisconnect().remove();
     }
     init();
 
-    function changeTheme(m, b) {
+    function setTheme(m, b) {
         document.documentElement.style.setProperty('--main', m);
         document.documentElement.style.setProperty('--bg', b);
-        document.documentElement.style.setProperty('--accent', m + '33');
         myData.color = m;
-        db.ref('v110_on/' + uName).update(myData);
+        db.ref('v111_on/' + uName).update(myData);
     }
 
-    function updateMe() { myData.decor = document.getElementById('p-decor').value; db.ref('v110_on/' + uName).update(myData); }
-    function upImg(input) { if (input.files && input.files[0]) { let r = new FileReader(); r.onload = e => { myData.img = e.target.result; document.getElementById('p-img').src = myData.img;
+    function updateMe() { myData.decor = document.getElementById('p-decor').value; db.ref('v111_on/' + uName).update(myData); }
+    function upImg(input) { if (input.files && input.files[0]) { let r = new FileReader(); r.onload = e => { myData.img = e.target.result; document.getElementById('p-img').src = myData.img; db.ref('v111_on/' + uName).update(myData); }; r.readAsDataURL(input.files[0]); } }
+
+    function sendM() {
+        let i = document.getElementById('msg-in'); if(!i.value.trim()) return;
+        let v = i.value.match(/^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/);
+        let vid = (v && v[2].length == 11) ? v[2] : null;
+        db.ref('v111_chat').push({ u: uName, t: i.value, d: myData.decor, a: myData.img, c: myData.color, v: vid });
+        i.value = "";
+    }
+
+    db.ref('v111_chat').on('child_added', s => {
+        let d = s.val(); let isO = d.u === "علوش";
+        let div = document.createElement('div');
+        div.style.display="flex"; div.style.gap="8px"; div.style.marginBottom="10px";
+        div.onclick = () => { document.getElementById('msg-in').value = `رد لـ ${d.u}: `; document.getElementById('msg-in').focus(); };
+        div.innerHTML = `
+            <img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid ${d.c};">
+            <div class="bubble" style="border-right-color:${d.c}">
+                <b class="${isO?'owner-tag':''}" style="color:${isO?'':d.c}">${isO ? 'علوش 👑' : (d.d+' '+d.u+' '+d.d)}</b>
+                <p>${d.t}</p>
+                ${d.v ? `<iframe class="yt-small" src="https://www.youtube.com/embed/${d.v}" frameborder="0" allowfullscreen></iframe>` : ''}
+            </div>`;
+        document.getElementById('chat-flow').appendChild(div);
+        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
+    });
+
+    db.ref('v111_on').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
+        s.forEach(u => {
+            let usr = u.val(); let isO = u.key === "علوش";
+            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222; display:flex; align-items:center; gap:8px;">
+                <img src="${usr.img}" style="width:30px; height:30px; border-radius:50%;">
+                <span class="${isO?'owner-tag':''}" style="color:${isO?'':usr.color}">● ${isO ? 'علوش 👑 (المالك)' : (usr.decor+' '+u.key)}</span>
+            </div>`;
+        });
+    });
+
+    function clearChat() { if(uName === "علوش") db.ref('v111_chat').remove(); }
+    function openSide(id) { document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
+</script>
+</body>
+</html>
