--- a/index.html
+++ b/index.html
@@ -3,100 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش | V119 🎙️👑</title>
+    <title>إمبراطورية علوش الصوتية | V120 👑</title>
+    <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.11.0.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --main: #ffd700; --bg: #050505; --mic-color: #00ff00; }
+        :root { --main: #ffd700; --bg: #050505; --live: #00ff00; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         body { background: var(--bg); color: white; height: 100vh; overflow: hidden; }
 
-        /* الهيدر والمايكات */
-        .header { height: 50px; background: #000; display: flex; align-items: center; justify-content: center; border-bottom: 1px solid #222; }
-        .mics-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px; padding: 10px; background: #111; border-bottom: 2px solid var(--main); }
-        .mic-box { background: #1a1a1a; border: 1px solid #333; border-radius: 8px; padding: 10px 0; text-align: center; cursor: pointer; transition: 0.3s; }
-        .mic-box.on { border-color: var(--mic-color); box-shadow: 0 0 10px var(--mic-color); }
-        .mic-box span { font-size: 10px; display: block; margin-top: 4px; color: #888; }
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: center; font-weight: 900; font-size: 20px; color: var(--main); }
+        
+        /* تصميم المايكات الاحترافي */
+        .mics-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; padding: 15px; background: #111; }
+        .mic-card { background: #1a1a1a; border: 2px solid #333; border-radius: 15px; padding: 12px 0; text-align: center; cursor: pointer; transition: 0.3s; }
+        .mic-card.active { border-color: var(--live); box-shadow: 0 0 15px var(--live); animation: pulse 1.5s infinite; }
+        .mic-card span { font-size: 11px; display: block; margin-top: 5px; color: #888; }
+        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.6; } 100% { opacity: 1; } }
 
-        /* الشات */
-        #chat-flow { height: calc(100vh - 270px); overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 8px; }
-        .bubble { background: #151515; padding: 10px; border-radius: 12px; border-right: 3px solid var(--main); max-width: 85%; }
+        #chat-flow { height: calc(100vh - 280px); overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .bubble { background: #111; padding: 10px; border-radius: 12px; border-right: 4px solid var(--main); max-width: 85%; }
 
-        /* منطقة الصمايلات */
-        #emoji-bar { background: #111; padding: 5px; display: flex; gap: 10px; overflow-x: auto; border-top: 1px solid #222; }
-        .emo { font-size: 22px; cursor: pointer; transition: 0.2s; }
-        .emo:hover { transform: scale(1.3); }
-
-        /* الفوتر */
-        .footer { height: 100px; background: #000; border-top: 2px solid var(--main); padding: 10px 15px 35px; display: flex; align-items: center; }
-        #msg-in { flex: 1; height: 40px; background: #111; border: 1px solid var(--main); border-radius: 20px; color: white; padding: 0 15px; outline: none; }
-        .send-btn { background: var(--main); color: #000; border: none; height: 40px; width: 60px; border-radius: 20px; font-weight: bold; margin-right: 10px; }
+        .footer { position: fixed; bottom: 0; width: 100%; height: 100px; background: #000; border-top: 2px solid var(--main); padding: 10px 15px 30px; display: flex; align-items: center; }
+        #msg-in { flex: 1; height: 42px; background: #111; border: 1px solid var(--main); border-radius: 20px; color: white; padding: 0 15px; outline: none; }
     </style>
 </head>
 <body>
 
-<div class="header" style="color:var(--main); font-weight:900;">إمبراطورية علوش 👑</div>
+<div class="header">مملكة علوش الصوتية 🎙️👑</div>
 
 <div class="mics-grid">
-    <div id="m1" class="mic-box" onclick="toggleMic(1)">🎤 <span id="u1">فارغ</span></div>
-    <div id="m2" class="mic-box" onclick="toggleMic(2)">🎤 <span id="u2">فارغ</span></div>
-    <div id="m3" class="mic-box" onclick="toggleMic(3)">🎤 <span id="u3">فارغ</span></div>
-    <div id="m4" class="mic-box" onclick="toggleMic(4)">🎤 <span id="u4">فارغ</span></div>
+    <div id="mic1" class="mic-card" onclick="joinVoice(1)">🎤 <span id="n1">فارغ</span></div>
+    <div id="mic2" class="mic-card" onclick="joinVoice(2)">🎤 <span id="n2">فارغ</span></div>
+    <div id="mic3" class="mic-card" onclick="joinVoice(3)">🎤 <span id="n3">فارغ</span></div>
+    <div id="mic4" class="mic-card" onclick="joinVoice(4)">🎤 <span id="n4">فارغ</span></div>
 </div>
 
 <div id="chat-flow"></div>
 
-<div id="emoji-bar">
-    <span class="emo" onclick="addEmo('😂')">😂</span><span class="emo" onclick="addEmo('😍')">😍</span>
-    <span class="emo" onclick="addEmo('🔥')">🔥</span><span class="emo" onclick="addEmo('👑')">👑</span>
-    <span class="emo" onclick="addEmo('😭')">😭</span><span class="emo" onclick="addEmo('🤣')">🤣</span>
-    <span class="emo" onclick="addEmo('🙄')">🙄</span><span class="emo" onclick="addEmo('🖤')">🖤</span>
-    <span class="emo" onclick="addEmo('🌹')">🌹</span><span class="emo" onclick="addEmo('👋')">👋</span>
-</div>
-
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="اكتب شيئاً..." onkeypress="if(event.key==='Enter') sendM()">
-    <button class="send-btn" onclick="sendM()">إرسال</button>
+    <input type="text" id="msg-in" placeholder="اكتب للجميع..." onkeypress="if(event.key==='Enter') sendM()">
+    <button onclick="sendM()" style="background:var(--main); border:none; height:40px; padding:0 20px; border-radius:20px; font-weight:bold; margin-right:10px;">إرسال</button>
 </div>
 
 <script>
+    // --- إعدادات Firebase ---
     const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
     firebase.initializeApp(config);
     const db = firebase.database();
 
+    // --- إعدادات الصوت (Agora) ---
+    const client = AgoraRTC.createClient({ mode: "rtc", codec: "vp8" });
+    const APP_ID = "8407e5f26cee469bb471493de0041ff6"; // الكود الخاص بك
+    let localAudioTrack;
     let uName = localStorage.getItem('chat_name') || prompt("اسمك:") || "زائر";
     localStorage.setItem('chat_name', uName);
 
-    // --- نظام المايكات ---
-    function toggleMic(n) {
-        db.ref('v119_mics/' + n).once('value').then(s => {
-            if(s.exists() && s.val().u === uName) {
-                db.ref('v119_mics/' + n).remove();
-            } else if(!s.exists()) {
-                db.ref('v119_mics/' + n).set({ u: uName });
-                db.ref('v119_mics/' + n).onDisconnect().remove();
-                alert("صعدت ع المايك! (ملاحظة: الصوت يحتاج سيرفر خارجي ليعمل للكل)");
+    // الوظيفة الرئيسية لتشغيل الصوت
+    async function joinVoice(micNum) {
+        try {
+            // إذا كان المستخدم أصلاً على المايك، يقوم بالنزول
+            if (localAudioTrack) {
+                await client.leave();
+                localAudioTrack.close();
+                localAudioTrack = null;
+                db.ref('v120_mics/' + micNum).remove();
+                return;
             }
-        });
+
+            // الانضمام للقناة الصوتية
+            await client.join(APP_ID, "alloush_room", null, null);
+            localAudioTrack = await AgoraRTC.createMicrophoneAudioTrack();
+            await client.publish([localAudioTrack]);
+            
+            db.ref('v120_mics/' + micNum).set({ u: uName });
+            db.ref('v120_mics/' + micNum).onDisconnect().remove();
+        } catch (e) {
+            console.error(e);
+            alert("تأكد من إعطاء إذن المايك للمتصفح!");
+        }
     }
 
-    db.ref('v119_mics').on('value', snap => {
-        for(let i=1; i<=4; i++) {
-            let d = snap.child(i).val();
-            document.getElementById('m'+i).className = d ? 'mic-box on' : 'mic-box';
-            document.getElementById('u'+i).innerText = d ? d.u : 'فارغ';
+    // الاستماع للأصوات الأخرى (لكي تسمع البقية)
+    client.on("user-published", async (user, mediaType) => {
+        await client.subscribe(user, mediaType);
+        if (mediaType === "audio") {
+            user.audioTrack.play();
         }
     });
 
-    // --- نظام الشات ---
+    // تحديث شكل المايكات
+    db.ref('v120_mics').on('value', s => {
+        for(let i=1; i<=4; i++) {
+            let d = s.child(i).val();
+            document.getElementById('mic'+i).className = d ? 'mic-card active' : 'mic-card';
+            document.getElementById('n'+i).innerText = d ? d.u : 'فارغ';
+        }
+    });
+
+    // --- نظام الشات العادي ---
     function sendM() {
         let i = document.getElementById('msg-in'); if(!i.value.trim()) return;
-        db.ref('v119_gen').push({ u: uName, t: i.value });
+        db.ref('v120_gen').push({ u: uName, t: i.value });
         i.value = "";
     }
 
-    db.ref('v119_gen').limitToLast(15).on('child_added', s => {
+    db.ref('v120_gen').limitToLast(20).on('child_added', s => {
         let d = s.val();
         let div = document.createElement('div');
         div.className = "bubble";
@@ -104,9 +117,6 @@
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
-
-    function addEmo(e) { document.getElementById('msg-in').value += e; }
-
 </script>
 </body>
 </html>
